--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "bananas": "node src/index.js",
-    "rahul": "npm run bananas && npm start"
+    "rahul": "npm run bananas && npm start",
+    "forest_run": "some command --argument run"
   },
   "keywords": [],
   "author": "Marianne",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^12.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
