--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "bananas": "node src/index.js",
-    "rahul": "npm run bananas && npm start",
-    "forest_run": "some command --argument run"
+    "docs": "jsdoc ./src/*" 
+   
   },
   "keywords": [],
   "author": "Marianne",
@@ -17,6 +16,7 @@
     "inquirer": "^12.0.0"
   },
   "devDependencies": {
+    "jsdoc": "^4.0.3",
     "nodemon": "^3.1.7"
   }
 }
